--- a/discord_twitter_webhooks/templates/add.html
+++ b/discord_twitter_webhooks/templates/add.html
@@ -1,60 +1,61 @@
-<h1>Add a feed</h1>
-<style>
-    body {
-        background-color: #111111;
-        color: #DCDDDE;
-    }
-</style>
-<script>
-     function validateForm() {
-         var x = document.forms["add"]["name"].value;
-         if (x == "") {
-             alert("Name must be filled out");
-             return false;
-         }
+{% extends 'base.html' %}
+{% block header %}
+    <h1>
+        {% block title %}Add a feed{% endblock %}
+    </h1>
+{% endblock %}
+{% block content %}
+    <script>
+        function validateForm() {
+            var x = document.forms["add"]["name"].value;
+            if (x == "") {
+                alert("Name must be filled out");
+                return false;
+            }
 
-         var x = document.forms["add"]["usernames"].value;
-         if (x == "") {
-             alert("Usernames must be filled out");
-             return false;
-         }
+            var x = document.forms["add"]["usernames"].value;
+            if (x == "") {
+                alert("Usernames must be filled out");
+                return false;
+            }
 
-         var x = document.forms["add"]["url"].value;
-         if (x == "") {
-             alert("Webhook URL must be filled out");
-             return false;
-         }
-         
-     }
-</script>
-<form name="add"
-      action="/add"
-      onsubmit="return validateForm()"
-      method="post">
-    <label for="name">Name:</label>
-</br>
+            var x = document.forms["add"]["url"].value;
+            if (x == "") {
+                alert("Webhook URL must be filled out");
+                return false;
+            }
+
+        }
+    </script>
+    <form name="add"
+          action="/add"
+          onsubmit="return validateForm()"
+          method="post">
+        <label for="name">Name:</label>
+    </br>
     <input type="text" id="name" name="name" value=""/>
 </br>
-    <label for="usernames">Usernames: (separate with spaces)</label>
+<label for="usernames">Usernames: (separate with spaces)</label>
 </br>
-    <input type="text" id="usernames" name="usernames" value=""/>
+<input type="text" id="usernames" name="usernames" value=""/>
 </br>
-    <label for="url">Webhook URL:</label>
+<label for="url">Webhook URL:</label>
 </br>
-    <input type="url" id="url" name="url" value=""/>
+<input type="url" id="url" name="url" value=""/>
 </br>
 </br>
-    </input type="checkbox"
-           id="include_retweets"
-           name="include_retweets"
-           value="true"/>
-    <label for="include_retweets">Include retweets</label>
+</input type="checkbox"
+id="include_retweets"
+name="include_retweets"
+value="true"/>
+<label for="include_retweets">Include retweets</label>
 </br>
-    <input type="checkbox"
-           id="include_replies"
-           name="include_replies"
-           value="true"/>
-    <label for="include_replies">Include replies</label>
+<input type="checkbox"
+       id="include_replies"
+       name="include_replies"
+       value="true"/>
+<label for="include_replies">Include replies</label>
 </br>
-    <input type="submit" value="Submit"/>
+<input type="submit" value="Submit"/>
 </form>
+{% endblock %}
