Use global tags for settings

--- a/discord_twitter_webhooks/templates/add.html
+++ b/discord_twitter_webhooks/templates/add.html
@@ -25,7 +25,6 @@
                     alert("Webhook URL must be filled out");
                     return false;
                 }
-
             }
         </script>
         <form name="add"
@@ -40,7 +39,7 @@
                            class="form-control bg-dark border-dark text-muted"
                            id="name"
                            placeholder=""/>
-                    <div id="feed_url_help" class="form-text">A name to identify this feed. This can be anything you want.</div>
+                    <div id="feed_url_help" class="form-text">A name to identify this group of Twitter accounts.</div>
                 </div>
             </div>
             <div class="row pb-2">
