You can now see all the users for each feed group

--- a/discord_twitter_webhooks/templates/index.html
+++ b/discord_twitter_webhooks/templates/index.html
@@ -21,7 +21,7 @@
                     <ul>
                         {% for feed in feed_item.feeds %}
                             <li>
-                                <a href="{{ feed.link }}">{{ feed.title }}</a>
+                                <a class="text-muted" href="{{ feed.link }}">{{ feed.title }}</a>
                             </li>
                         {% endfor %}
                     </ul>
