--- a/discord_twitter_webhooks/templates/base.html
+++ b/discord_twitter_webhooks/templates/base.html
@@ -11,7 +11,7 @@
           rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
           crossorigin="anonymous"/>
-    <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet"/>
+    <link href="{{ url_for('static', path='/style.css') }}" rel="stylesheet"/>
     <title>discord-twitter-webhooks
       {% block title %}
       {% endblock title %}
