--- a/discord_twitter_webhooks/templates/index.html
+++ b/discord_twitter_webhooks/templates/index.html
@@ -15,6 +15,8 @@
             <div class="p-2 mb-2 border border-dark">
                 <div class="feed">
                     <h2>{{ feed_item.name }}</h2>
+                    <a class="text-muted" href="/mark_as_unread/{{ feed_item.name }}">Mark as unread</a>
+                    <br/>
                     webhook url: {{ feed_item.webhook }}
                     <br/>
                     usernames:
