Add WIP for more settings

--- a/discord_twitter_webhooks/templates/add.html
+++ b/discord_twitter_webhooks/templates/add.html
@@ -63,7 +63,7 @@
         role="switch"
         id="include_retweets"
         name="include_retweets"
-        value="false"
+        value="False"
       />
       <label class="form-check-label" for="include_retweets"
         >Include retweets</label
@@ -81,7 +81,7 @@
         role="switch"
         id="include_replies"
         name="include_replies"
-        value="false"
+        value="False"
       />
       <label class="form-check-label" for="include_replies"
         >Include replies</label
@@ -101,7 +101,7 @@
         type="radio"
         name="send_embed"
         id="send_embed"
-        value="send_embed"
+        value="True"
         checked
       />
       <label class="form-check-label" for="send_embed"> Send Embed? </label>
@@ -113,7 +113,7 @@
         type="radio"
         name="send_text"
         id="send_text"
-        value="send_text"
+        value="True"
       />
       <label class="form-check-label" for="send_text"> Send Text? </label>
     </div>
@@ -124,7 +124,7 @@
         type="radio"
         name="send_link"
         id="send_link"
-        value="send_link"
+        value="True"
       />
       <label class="form-check-label" for="send_link"> Send Link? </label>
     </div>
@@ -150,7 +150,7 @@
         role="switch"
         id="random_color"
         name="random_color"
-        value="false"
+        value="False"
       />
       <label class="form-check-label" for="random_color">Random color</label>
       <div id="random_color_help" class="form-text">
@@ -234,7 +234,7 @@
         role="switch"
         id="embed_timestamp"
         name="embed_timestamp"
-        value="false"
+        value="False"
       />
       <label class="form-check-label" for="embed_timestamp">Timestamp</label>
       <div id="embed_timestamp_help" class="form-text">
@@ -285,7 +285,7 @@
         role="switch"
         id="embed_show_title"
         name="embed_show_title"
-        value="false"
+        value="False"
       />
       <label class="form-check-label" for="embed_show_title">Embed title</label>
       <div id="url_help" class="form-text">
@@ -300,7 +300,7 @@
         role="switch"
         id="embed_show_author"
         name="embed_show_author"
-        value="false"
+        value="False"
       />
       <label class="form-check-label" for="embed_show_author"
         >Embed author</label
@@ -321,7 +321,7 @@
         role="switch"
         id="send_link_preview"
         name="send_link_preview"
-        value="false"
+        value="False"
       />
       <label class="form-check-label" for="send_link_preview"
         >Send link preview</label
@@ -341,7 +341,7 @@
         role="switch"
         id="make_text_a_link"
         name="make_text_a_link"
-        value="false"
+        value="False"
       />
       <label class="form-check-label" for="make_text_a_link"
         >Make text a link</label
@@ -358,7 +358,7 @@
         role="switch"
         id="make_text_a_link_preview"
         name="make_text_a_link_preview"
-        value="false"
+        value="False"
       />
       <label class="form-check-label" for="make_text_a_link_preview"
         >Should the link make a preview in Discord?</label
@@ -393,7 +393,7 @@
         role="switch"
         id="upload_media_to_discord"
         name="upload_media_to_discord"
-        value="false"
+        value="False"
       />
       <label class="form-check-label" for="upload_media_to_discord"
         >Upload media to Discord</label
@@ -410,7 +410,7 @@
         role="switch"
         id="append_usernames_to_message"
         name="append_usernames_to_message"
-        value="false"
+        value="False"
       />
       <label class="form-check-label" for="append_usernames_to_message"
         >Append usernames to message</label
@@ -430,7 +430,7 @@
         role="switch"
         id="translate"
         name="translate"
-        value="false"
+        value="False"
       />
       <label class="form-check-label" for="translate">Translate</label>
       <div id="translate_help" class="form-text">
@@ -464,7 +464,7 @@
         role="switch"
         id="whitelist_active"
         name="whitelist_active"
-        value="false"
+        value="False"
       />
       <label class="form-check-label" for="whitelist_active"
         >Whitelist active</label
@@ -502,7 +502,7 @@
         role="switch"
         id="blacklist_active"
         name="blacklist_active"
-        value="false"
+        value="False"
       />
       <label class="form-check-label" for="blacklist_active"
         >Blacklist active</label
@@ -540,7 +540,7 @@
         role="switch"
         id="unescape_html"
         name="unescape_html"
-        value="true"
+        value="True"
       />
       <label class="form-check-label" for="unescape_html">Unescape HTML</label>
       <div id="unescape_html_help" class="form-text">
@@ -556,7 +556,7 @@
         role="switch"
         id="remove_utm"
         name="remove_utm"
-        value="true"
+        value="True"
       />
       <label class="form-check-label" for="remove_utm">Remove UTM params</label>
       <div id="remove_utm_help" class="form-text">
@@ -577,7 +577,7 @@
         role="switch"
         id="remove_copyright"
         name="remove_copyright"
-        value="true"
+        value="True"
       />
       <label class="form-check-label" for="remove_utm"
         >Remove &copy;, &reg;, and &trade;</label
@@ -594,7 +594,7 @@
         role="switch"
         id="convert_usernames_to_links"
         name="convert_usernames_to_links"
-        value="true"
+        value="True"
       />
       <label class="form-check-label" for="convert_usernames_to_links"
         >Convert usernames to links</label
@@ -632,7 +632,7 @@
         role="switch"
         id="convert_hashtags_to_links"
         name="convert_hashtags_to_links"
-        value="true"
+        value="True"
       />
       <label class="form-check-label" for="convert_hashtags_to_links"
         >Convert hashtags to links</label
