Add WIP for global settings

--- a/discord_twitter_webhooks/templates/nav.html
+++ b/discord_twitter_webhooks/templates/nav.html
@@ -12,12 +12,23 @@
     </button>
     <div class="navbar-collapse collapse" id="collapseNavbar">
       <ul class="navbar-nav">
+        {# Feeds #}
         <li class="nav-item">
           <a class="nav-link" href="/">Feeds</a>
         </li>
+
         <li class="nav-item nav-link d-none d-md-block">|</li>
+
+        {# Add #}
         <li class="nav-item">
           <a class="nav-link" href="/add">Add</a>
+        </li>
+
+        <li class="nav-item nav-link d-none d-md-block">|</li>
+
+        {# Settings #}
+        <li class="nav-item">
+          <a class="nav-link" href="/settings">Settings</a>
         </li>
       </ul>
       {# Search #}
